test/expected/large/dataminingwarehouse/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: datamining
    foo.com/duversion: 39.0.33-20190921.1569051370019
    foo.com/version: 39.0.33
  labels:
    app.kubernetes.io/name: datamining
    helm.sh/chart: datamining-39.0.33
  name: dataminingwarehouse
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataMiningWarehouse
    - uri:
        prefix: /dataMiningWarehouse/
    route:
    - destination:
        host: dataminingwarehouse.peekay.svc.cluster.local
